feat: use openrewrite to move from java 17 to 21